src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; Country__c, Country__r.Name, &quot;_blank&quot;)+&quot;-&gt;&quot;+ State_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Districts__c</fullName>
        <label>Total No of Districts</label>
        <summaryForeignKey>District__c.State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Identification__c</columns>
        <columns>Country__c</columns>
        <columns>Total_No_of_Districts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>State Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>